# BluefinAIAgentTrader

./: .cursorrules.md  .dockerignore  .env.example  .env.test  .gitignore  =61.0.0  Claude API Documentation_ A Comprehensive Guide.md  Comprehensive Guide_ AI Trading Agent for Bluefin.md  Dockerfile  Dockerfile.agent  Dockerfile.test  README.md  SECURITY_CHECKLIST.md  Trading AI Agent Integration Guide_ Playwright, Pe.md  WEBHOOK_README.md  agent.py  app.py  build.sh  check_services.sh  check_status.sh  cleanup_docker.sh  config.py  crontab_setup.sh  debug_alerts.py  debug_docker.sh  deploy.sh  docker-compose.live.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.webhook.yml  docker-compose.yml  entrypoint.sh  generate_alerts.py  generate_tradingview_alerts.py  h --force-with-lease origin main  implementation_checklist.md  index.html  install_services.sh  list_claude_models.py  (+58 more)
.cursor/rules/: cursorrules.mdc
.github/: dependabot.yml
.qodo/: history.sqlite
alerts/: alert_20250306234638_SUI_PERP.json
api/: webhook_handler.py
bluefin_env/: pyvenv.cfg
brave/: chrome.VisualElementsManifest.xml
brave/133.1.75.180/: brave.exe.sig  brave_100_percent.pak  brave_200_percent.pak  chrome.dll.sig  chrome_100_percent.pak  chrome_200_percent.pak
brave/133.1.75.180/Locales/: af.pak  am.pak  ar.pak  bg.pak  bn.pak  ca.pak  cs.pak  da.pak  de.pak  el.pak  en-GB.pak  en-US.pak  es-419.pak  es.pak  et.pak  fa.pak  fi.pak  fil.pak  fr.pak  gu.pak  he.pak  hi.pak  hr.pak  hu.pak  id.pak  it.pak  ja.pak  kn.pak  ko.pak  lt.pak  lv.pak  ml.pak  mr.pak  ms.pak  nb.pak  nl.pak  pl.pak  pt-BR.pak  pt-PT.pak  ro.pak  (+15 more)
config/: config.py
core/: README.md  agent.py  bluefin_client.py  bluefin_market.py  chart_analyzer.py  config.py  performance_tracker.py  perplexity_client.py  position_manager.py  risk_manager.py  signal_processor.py  trade_executor.py  visualization.py
examples/: performance_analysis_example.py
frontend/: Dockerfile
frontend/src/: App.css  App.tsx  api.ts
frontend/src/pages/: AIChat.tsx  Configuration.tsx  Dashboard.tsx  Login.tsx  TradingActions.tsx
infrastructure/.devcontainer/: devcontainer.json
infrastructure/docker/: Dockerfile  Dockerfile.agent  check_services_docker.sh  docker-compose.live.yml  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.yml  healthcheck.sh  index.html  nginx.conf  nginx.simple.conf  package.json  requirements.txt  simple_agent.py  simple_webhook.py  simple_websocket.py  webhook_server.py
infrastructure/docker/.api/: api.json
infrastructure/docker/.api/apis/bluefin-exchange/: index.ts  openapi.json  package.json  schemas.ts  types.ts
src/: types.d.ts
src/backend/: app.py  flaskapp.py  main.py
src/backend/core/: README.md  __init__.py  agent.py  bluefin_client.py  bluefin_trade_agent.py  config.py  perplexity_client.py  signal_processor.py
src/backend/core/bluefin_api/: __init__.py  client.py  websocket.py
test/: send_test_alert.py  test_webhook_integration.py
